# goswift

./: .gitignore  README.rst  config.yml.example  requirements.txt  setup.cfg  setup.py
docker/: Dockerfile-backend  Dockerfile-frontend  README.md  docker-compose.yml  nginx.conf
goswift/: app.py  version.py
goswift-ui-web/: Gruntfile.js  package-lock.json  package.json
goswift-ui-web/public/: index.html
goswift-ui-web/scripts/: Dockerfile-backend  Dockerfile-frontend  README.md  startweb.sh
goswift-ui-web/src/: App.css  App.js  Auth.js  Config.js  Container.js  ContainerFile.js  ContainerFileDelete.js  ContainerFileInfo.js  ContainerInfo.js  Header.js  Home.css  Home.js  Hooks.css  Hooks.js  Login.js  Quota.js  SearchContainer.js  UploadManager.js  UploadProgress.js  UploadZone.js  Utils.js  index.css
goswift/static/goswift-ui/: package.json
goswift/static/goswift-ui/public/: manifest.json
goswift/static/goswift-ui/src/: App.js  Auth.js  Container.js  ContainerFile.js  ContainerFileInfo.js  Header.js  Home.js  Login.js  UploadProgress.css  UploadProgress.js  UploadZone.css  UploadZone.js  index.js
middleware/: config.ini  setup.py
middleware/goswiftindex/: app.py  middleware.py
releasenotes/source/: conf.py  index.rst
