[metadata]
name = goswift
summary = Swift Web UI
description-file =
    README.rst
author = Olivier Sallou
author-email = olivier.sallou@irisa.fr
home-page = https://github.com/genouest/goswift
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    goswift

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

